plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.105'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com"
    }

    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        name = "Curios maven"
        url = "https://maven.theillusivec4.top/"
    }

    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }

    maven {
        url = "https://jitpack.io"
        content {
            includeGroup "com.github.rtyley"
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // EMI | Client + Compilation Side
    compileOnlyApi("dev.emi:emi-neoforge:1.1.22+1.21.1:api")
    runtimeOnly("dev.emi:emi-neoforge:1.1.22+1.21.1")

    //Curios API | Client + Compilation Side
    compileOnlyApi("top.theillusivec4.curios:curios-neoforge:${property("curios_version")}")
    runtimeOnly("top.theillusivec4.curios:curios-neoforge:${property("curios_version")}")

    //JEI | Client + Compilation Side
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    //Cold Sweat | Client Side
    compileOnly("curse.maven:cold-sweat-506194:7370181")
    runtimeOnly("curse.maven:cold-sweat-506194:7370181")

    //Legendary Survival Overhaul | Client Side
    //runtimeOnly("curse.maven:legendary-survival-overhaul-840254:7603851")

    //Iris Shaders | Client Side
    runtimeOnly("curse.maven:sodium-394468:6382651")
    implementation("curse.maven:irisshaders-455508:6661598")

    //VortyLib | Client + Compilation Side
    implementation("xox.labvorty.vortylib:vortylib-template-1.21.1:1.2.2")

    //Patchouli | Client Side
    compileOnly("vazkii.patchouli:Patchouli:${patchouli_version}:api")
    compileOnly("vazkii.patchouli:Patchouli:${patchouli_version}")
    runtimeOnly("vazkii.patchouli:Patchouli:${patchouli_version}")

    //KubeJS
    implementation("dev.latvian.mods:kubejs-neoforge:${kubejs_version}")

    //ChaosLib
    runtimeOnly("dev.elifian.chaoslib:neoforge:1.1.0")

    //Cosmetic Armor
    implementation("curse.maven:cosmetic-armor-reworked-237307:5610814")
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
